# notification-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
alembic/: __init__.py  env.py
alembic/versions/: 488b49d74775_merge_heads.py  52d96cb653d4_fix_relationships.py  58bed09d008e_add_mailing_table.py  7901b95267e0_add_status_to_mailing.py  99ea6860f781_initial_migration.py  ac4d03fdfae6_add_status_to_mailing.py  c40e6204af72_create_users_table.py
src/: database.py  main.py
src/api/: __init__.py  api_auth.py  api_contacts.py  api_mailings.py  dependencies.py
src/core/: __init__.py  config.py  security.py
src/models/: __init__.py  contact.py  mailing.py  user.py
src/schemas/: schema_contact.py  schema_mailing.py  schema_user.py
src/services/: __init__.py
src/tasks/: __init__.py  celery_app.py  mailing_tasks.py
tests/: conftest.py  test_auth.py  test_mailings.py
